# web-embedded-python

./: LICENSE  README.md  main.py  pyproject.toml
public/: aidemo.wep  demo.wep  index.wep  script.js
